--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
     "react-scripts": "5.0.1",
     "sass": "^1.95.1",
